--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,14 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
+    <!--lombok 依赖-->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.20</version>
+      <scope>provided</scope>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
